--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,7 +4,4 @@ on: push
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/test.yml@main
+    uses: ./.github/workflows/test.yml
