--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,10 +1,14 @@
 name: Pull Request
 
-on: pull_request
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  pr:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/test.yml@main
+  test:
+    uses: ./.github/workflows/test.yml
+  # pr:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
