--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,5 +3,9 @@ name: Push Action
 on: push
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
   test:
     uses: ./.github/workflows/test.yml
