--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     uses: ./.github/workflows/test.yml
-  # pr:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
+  build:
+    uses: ./.github/workflows/build.yml
+  # deploy-review:
+  #   uses: ./.github/workflows/deploy-review.yml
