--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,6 +2,6 @@ name: Push Action
 
 on: push
 
-jobs:
-  test:
-    uses: ./.github/workflows/test.yml
+# jobs:
+#   test:
+#     uses: ./.github/workflows/test.yml
