--- a/.github/workflows/deps-npm.yml
+++ b/.github/workflows/deps-npm.yml
@@ -8,6 +8,8 @@ jobs:
   update:
     name: Update NPM Dependencies
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
