--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,10 @@
 steps:
+# Build the container image
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'us-central1-docker.pkg.dev/expapp-349719/expapp-quickstart/expapp-image:$BRANCH_NAME', '.' ]
+# Deploy container image to Cloud Run
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gcloud
+  args: ['run', 'deploy', 'expapp', '--image', 'us-central1-docker.pkg.dev/expapp-349719/expapp-quickstart/expapp-image:$BRANCH_NAME', '--region', 'us-central1a']
 images:
 - 'us-central1-docker.pkg.dev/expapp-349719/expapp-quickstart/expapp-image:$BRANCH_NAME'
