--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build Docker Image
-        run: |
-          echo "Ref Name: ${{ github.ref_name }}"
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Github Packages
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+
+      - name: Build image and push to Docker Hub and GitHub Container Registry
+        uses: docker/build-push-action@v2
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          # context: ./src/samples/simple
+          # Note: tags has to be all lower-case
+          tags: |
+            eltimn/expapp-image:latest
+          # build on feature branches, push only on main branch
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+
+      # - name: Build Docker Image
+      #   run: |
+      #     echo "Ref Name: ${{ github.ref_name }}"
       # - uses: nelonoel/branch-name@v1.0.1
       # - uses: google-github-actions/setup-gcloud@master
       # - uses: RafikFarhad/push-to-gcr-github-action@v4
