--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Build image and push to Docker Hub and GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
+          push: true
           # relative path to the place where source code with Dockerfile is located
           # context: ./src/samples/simple
           # Note: tags has to be all lower-case
