--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,16 @@ name: Build Action
 on:
   workflow_call:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build_docker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
@@ -15,20 +20,34 @@ jobs:
       - name: Login to Github Packages
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ github.token }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build image and push to GitHub Container Registry
-        uses: docker/build-push-action@v2
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
         with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
           push: true
-          # relative path to the place where source code with Dockerfile is located
-          # context: ./src/samples/simple
-          # Note: tags has to be all lower-case
-          tags: |
-            ghcr.io/eltimn/expapp-image:latest
-          # build on feature branches, push only on main branch
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      # - name: Build image and push to GitHub Container Registry
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     push: true
+      #     # relative path to the place where source code with Dockerfile is located
+      #     # context: ./src/samples/simple
+      #     # Note: tags has to be all lower-case
+      #     tags: |
+      #       ghcr.io/eltimn/expapp-image:latest
+      #     # build on feature branches, push only on main branch
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
