--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: 16
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0'
@@ -26,10 +26,12 @@ jobs:
           # service_account: 'github-actions@expapp-pulumi.iam.gserviceaccount.com'
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
       - run: npm install
+        working-directory: ./pulumi
       - uses: pulumi/actions@v3
         with:
           command: preview
           stack-name: staging
+          work-dir: ./pulumi
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
   # build:
