--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,9 +9,13 @@ jobs:
   test:
     uses: ./.github/workflows/test.yml
 
+  build:
+    uses: ./.github/workflows/build.yml
+    needs: test
+
   preview:
     name: Preview
-    needs: test
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -34,8 +38,6 @@ jobs:
           work-dir: ./pulumi
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-  # build:
-  #   uses: ./.github/workflows/build.yml
-  #   needs: test
+
   # deploy-review:
   #   uses: ./.github/workflows/deploy-review.yml
