fix update deps 2

--- a/.github/workflows/deps-npm.yml
+++ b/.github/workflows/deps-npm.yml
@@ -1,9 +1,11 @@
 name: Update Deps - NPM
+
 on:
   schedule:
     # Sunday at 5:00pm
     - cron: "0 17 * * 0"
   workflow_dispatch:
+
 jobs:
   update:
     name: Update NPM Dependencies
@@ -19,7 +21,7 @@ jobs:
           id: ${{ github.run_id }}
           token: ${{ github.token }}
       - name: Update Pulumi Dependencies
-        run: ./.github/scripts/update-npm.sh
+        run: ../.github/scripts/update-npm.sh
         working-directory: ./pulumi
         env:
           id: ${{ github.run_id }}
