--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -19,6 +19,10 @@ jobs:
       id-token: 'write'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
       # - uses: rlespinasse/github-slug-action@3.1.0
 
       - name: Extract metadata (tags, labels) for Docker
