--- a/.github/workflows/deps-npm.yml
+++ b/.github/workflows/deps-npm.yml
@@ -11,6 +11,7 @@ jobs:
     name: Update NPM Dependencies
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
     timeout-minutes: 30
     steps:
@@ -26,7 +27,7 @@ jobs:
         env:
           id: ${{ github.run_id }}
           token: ${{ github.token }}
-      - name: Update App Dependencies
+      - name: Open PR
         run: ./.github/scripts/open-pr.sh
         env:
           id: ${{ github.run_id }}
