--- a/.github/workflows/deps-npm.yml
+++ b/.github/workflows/deps-npm.yml
@@ -11,7 +11,7 @@ jobs:
     name: Update NPM Dependencies
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
     timeout-minutes: 30
     steps:
