--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,10 +11,9 @@ jobs:
 
   build:
     uses: ./.github/workflows/build.yml
-    needs: test
 
   preview:
-    name: Preview
+    name: Preview staging
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -22,15 +21,15 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
+
+      - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0'
         with:
-          # project_id: expapp-pulumi
-          # service_account: 'github-actions@expapp-pulumi.iam.gserviceaccount.com'
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+
       - run: npm install
         working-directory: ./pulumi
+
       - uses: pulumi/actions@v3
         with:
           command: preview
@@ -38,6 +37,3 @@ jobs:
           work-dir: ./pulumi
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-
-  # deploy-review:
-  #   uses: ./.github/workflows/deploy-review.yml
