--- a/.github/workflows/pr-closed.yml
+++ b/.github/workflows/pr-closed.yml
@@ -34,3 +34,10 @@ jobs:
           work-dir: ./pulumi
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
+      - name: Remove stack
+        run: node remove-stack.js
+        working-directory: ./pulumi/scripts
+        env:
+          PR_STACK_NAME: "review-${{ steps.slugify.outputs.branch }}"
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
