--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -11,10 +11,11 @@ on:
 jobs:
   deploy:
     permissions:
-      # deployments: write
+      deployments: write
       contents: 'read'
-      # id-token: 'write'
+      id-token: 'write'
     runs-on: ubuntu-latest
+    environment: staging
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -22,7 +23,7 @@ jobs:
           node-version: 16
 
       - name: 'Authenticate to Google Cloud'
-        uses: google-github-actions/auth@v0
+        uses: 'google-github-actions/auth@v0'
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
