--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -11,6 +11,7 @@ jobs:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
+    environment: review
     steps:
       - uses: actions/checkout@v2
 
