--- a/.github/workflows/pr-closed.yml
+++ b/.github/workflows/pr-closed.yml
@@ -53,16 +53,26 @@ jobs:
       - id: slugify
         uses: eltimn/slugify-action@v1.5
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   id: buildx
+      #   uses: docker/setup-buildx-action@v1
 
-      - name: Login to Github Packages
-        uses: docker/login-action@v1
+      # - name: Login to Github Packages
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+
+      - run: echo "env.IMAGE_NAME - ${{ env.IMAGE_NAME }}"
+
+      # - name: Remove docker images
+      #   run: docker image rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
+
+      - name: Delete image
+        uses: bots-house/ghcr-delete-image-action@v1.0.0
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Remove docker images
-        run: docker image rm ${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
+          owner: eltimn
+          name: expapp
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.slugify.outputs.branch }}
