--- a/.github/workflows/pr-closed.yml
+++ b/.github/workflows/pr-closed.yml
@@ -74,6 +74,6 @@ jobs:
         uses: bots-house/ghcr-delete-image-action@v1.0.0
         with:
           owner: ${{ github.repository_owner }}
-          name: ${{ github.repository.split('/')[1] }}
+          name: expapp
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.slugify.outputs.branch }}
