--- a/.github/workflows/pr-closed.yml
+++ b/.github/workflows/pr-closed.yml
@@ -5,8 +5,9 @@ on:
     types: [closed]
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  # REGISTRY: ghcr.io
+  # IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: expapp
 
 jobs:
   destroy:
@@ -33,6 +34,7 @@ jobs:
         working-directory: ./pulumi
 
       - uses: pulumi/actions@v3
+        continue-on-error: true
         with:
           command: destroy
           stack-name: "review-${{ steps.slugify.outputs.branch }}"
@@ -45,23 +47,23 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-  cleanup:
-    name: Cleanup docker images
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+  # cleanup:
+  #   name: Cleanup docker images
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - id: slugify
-        uses: eltimn/slugify-action@v1.5
+  #     - id: slugify
+  #       uses: eltimn/slugify-action@v1.5
 
-      - name: Login to Github Packages
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Login to Github Packages
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: echo "env.IMAGE_NAME - ${{ env.IMAGE_NAME }}"
+      # - run: echo "env.IMAGE_NAME - ${{ env.IMAGE_NAME }}"
 
       # - name: Set up Docker Buildx
       #   id: buildx
@@ -70,10 +72,11 @@ jobs:
       # - name: Remove docker images
       #   run: docker image rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
 
-      - name: Delete image
-        uses: bots-house/ghcr-delete-image-action@v1.0.0
-        with:
-          owner: ${{ github.repository_owner }}
-          name: expapp
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.slugify.outputs.branch }}
+      # TODO: try with an organization
+      # - name: Delete image
+      #   uses: bots-house/ghcr-delete-image-action@v1.0.0
+      #   with:
+      #     owner: ${{ github.repository_owner }}
+      #     name: ${{ env.IMAGE_NAME }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     tag: ${{ steps.slugify.outputs.branch }}
