--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,29 +12,29 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
-  preview:
-    name: Preview staging
-    needs: build
-    runs-on: ubuntu-latest
-    environment: staging
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
+  # preview:
+  #   name: Preview staging
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   environment: staging
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 16
 
-      - name: 'Authenticate to Google Cloud'
-        uses: google-github-actions/auth@v0
-        with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+  #     - name: 'Authenticate to Google Cloud'
+  #       uses: google-github-actions/auth@v0
+  #       with:
+  #         credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
-      - run: npm install
-        working-directory: ./pulumi
+  #     - run: npm install
+  #       working-directory: ./pulumi
 
-      - uses: pulumi/actions@v3
-        with:
-          command: preview
-          stack-name: staging
-          work-dir: ./pulumi
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+  #     - uses: pulumi/actions@v3
+  #       with:
+  #         command: preview
+  #         stack-name: staging
+  #         work-dir: ./pulumi
+  #       env:
+  #         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
