--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,6 +12,29 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
+  stack_exists:
+    runs-on: ubuntu-latest
+    environment: review
+    steps:
+      - uses: actions/checkout@v2
+
+      - id: slugify
+        uses: eltimn/slugify-action@v1.5
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install pulumi
+        uses: pulumi/setup-pulumi@v2
+        with:
+          pulumi-version: ^3.0.0
+      - name: Check stack exists
+        run: node stack-exists.js
+        working-directory: ./pulumi/scripts
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
   # preview:
   #   name: Preview staging
   #   needs: build
