--- a/.github/workflows/pull-request-closed.yml
+++ b/.github/workflows/pull-request-closed.yml
@@ -44,20 +44,20 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-      # - uses: pulumi/actions@v3
-      #   continue-on-error: true
-      #   with:
-      #     command: destroy
-      #     stack-name: "review-${{ steps.slugify.outputs.branch }}"
-      #     work-dir: ./pulumi
-      #   env:
-      #     PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      - uses: pulumi/actions@v3
+        continue-on-error: true
+        with:
+          command: destroy
+          stack-name: "review-${{ steps.slugify.outputs.branch }}"
+          work-dir: ./pulumi
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-      # - run: pulumi stack rm "review-${{ steps.slugify.outputs.branch }}" --yes
-      #   continue-on-error: true
-      #   working-directory: ./pulumi
-      #   env:
-      #     PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      - run: pulumi stack rm "review-${{ steps.slugify.outputs.branch }}" --yes
+        continue-on-error: true
+        working-directory: ./pulumi
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
   # cleanup:
   #   name: Cleanup docker images
