--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,26 +12,26 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
 
-  # stack_exists:
-  #   runs-on: ubuntu-latest
-  #   environment: review
-  #   steps:
-  #     - uses: actions/checkout@v2
+  stack_exists:
+    runs-on: ubuntu-latest
+    environment: review
+    steps:
+      - uses: actions/checkout@v2
 
-  #     - id: slugify
-  #       uses: eltimn/slugify-action@v1.5
+      - id: slugify
+        uses: eltimn/slugify-action@v1.5
 
-  #     - uses: actions/setup-node@v2
-  #       with:
-  #         node-version: 16
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
 
-  #     - run: npm install
-  #       working-directory: ./pulumi
+      - run: npm install
+        working-directory: ./pulumi
 
-  #     - name: Install pulumi
-  #       uses: pulumi/setup-pulumi@v2
-  #       with:
-  #         pulumi-version: ^3.0.0
+      - name: Install pulumi
+        uses: pulumi/setup-pulumi@v2
+        with:
+          pulumi-version: ^3.0.0
 
       - name: Check stack exists
         run: node stack-exists.js
