added image name

--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -4,6 +4,10 @@ on:
   workflow_dispatch:
   workflow_call:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   deploy:
     permissions:
@@ -40,10 +44,11 @@ jobs:
         working-directory: ./pulumi/scripts
         env:
           STACK_PREFIX: "review"
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           GCP_REGION: "us-west1"
           GIT_BRANCH: ${{ steps.slugify.outputs.branch }}
           GIT_SHA: ${{ steps.slugify.outputs.sha }}
+          IMAGE_NAME: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
       - name: Deploy stack
         uses: pulumi/actions@v3
