--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 env:
-  REGISTRY: gcr.io
+  REGISTRY: us-central1-docker.pkg.dev
   # REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
@@ -31,6 +31,11 @@ jobs:
       #     registry: ${{ env.REGISTRY }}
       #     username: ${{ github.actor }}
       #     password: ${{ secrets.GITHUB_TOKEN }}
+
+      - run: 'echo "$GCR_JSON_KEY" > key'
+        shell: bash
+        env:
+          GCR_JSON_KEY: ${{secrets.GCR_JSON_KEY}}
 
       - name: Login to Google Artifact Registry
         uses: docker/login-action@v2
