--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,17 +33,12 @@ jobs:
       #     username: ${{ github.actor }}
       #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: 'echo "$GCR_JSON_KEY" > key'
-        shell: bash
-        env:
-          GCR_JSON_KEY: ${{secrets.GCR_JSON_KEY}}
-
       - name: Login to Google Artifact Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: _json_key
-          password: ${{ secrets.GCR_JSON_KEY }}
+          password: ${{ secrets.GAR_JSON_KEY }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
