--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,20 @@ name: Build Action
 
 on:
   workflow_call:
+    inputs:
+      registry:
+        required: true
+        type: string
+      image_name:
+        required: true
+        type: string
+    secrets:
+      GAR_JSON_KEY:
+        required: true
 
-env:
-  REGISTRY: us-docker.pkg.dev/expapp-pulumi/expapp
-  IMAGE_NAME: expapp
-  # REGISTRY: ghcr.io
-  # IMAGE_NAME: ${{ github.repository }}
+# env:
+#   REGISTRY: ghcr.io
+#   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build_docker:
@@ -29,14 +37,14 @@ jobs:
       # - name: Login to Github Packages
       #   uses: docker/login-action@v1
       #   with:
-      #     registry: ${{ env.REGISTRY }}
+      #     registry: ${{ inputs.registry }}
       #     username: ${{ github.actor }}
       #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Google Artifact Registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ inputs.registry }}
           username: _json_key
           password: ${{ secrets.GAR_JSON_KEY }}
 
@@ -45,7 +53,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
+          tags: ${{ inputs.registry }}/${{ inputs.image_name }}:${{ steps.slugify.outputs.branch }}
 
       # - name: Image digest
       #   run: echo ${{ steps.docker_build.outputs.digest }}
