--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -71,6 +71,8 @@ jobs:
 
       - name: 'Setup gcloud SDK'
         uses: google-github-actions/setup-gcloud@v0
+        with:
+          install_components: 'beta'
 
       - name: 'Allow public access'
         run: |-
