--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -46,41 +46,41 @@ jobs:
         working-directory: ./pulumi/scripts
         env:
           STACK_NAME: "review-${{ steps.slugify.outputs.branch }}"
-          GCP_LOCATION: "us"
+          # GCP_LOCATION: "us-central1"
           # GCP_REGION: "us-west1"
           # GIT_BRANCH: ${{ steps.slugify.outputs.branch }}
           # GIT_SHA: ${{ steps.slugify.outputs.sha }}
           IMAGE_URI: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-      # - name: Deploy stack
-      #   uses: pulumi/actions@v3
+      - name: Deploy stack
+        uses: pulumi/actions@v3
+        with:
+          command: up
+          stack-name: "review-${{ steps.slugify.outputs.branch }}"
+          work-dir: ./pulumi
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+
+      # - id: 'deploy'
+      #   uses: 'google-github-actions/deploy-cloudrun@v0'
       #   with:
-      #     command: up
-      #     stack-name: "review-${{ steps.slugify.outputs.branch }}"
-      #     work-dir: ./pulumi
-      #   env:
-      #     PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-
-      - id: 'deploy'
-        uses: 'google-github-actions/deploy-cloudrun@v0'
-        with:
-          service: 'expapp-${{ steps.slugify.outputs.branch }}'
-          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
+      #     service: 'expapp-${{ steps.slugify.outputs.branch }}'
+      #     image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
 
 
-      - name: 'Setup gcloud SDK'
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          install_components: 'beta'
+      # - name: 'Setup gcloud SDK'
+      #   uses: google-github-actions/setup-gcloud@v0
+      #   with:
+      #     install_components: 'beta'
 
-      - name: 'Allow public access'
-        run: |-
-          gcloud beta run services add-iam-policy-binding \
-            --region=us-central1 \
-            --member=allUsers \
-            --role=roles/run.invoker \
-            expapp-${{ steps.slugify.outputs.branch }}
+      # - name: 'Allow public access'
+      #   run: |-
+      #     gcloud beta run services add-iam-policy-binding \
+      #       --region=us-central1 \
+      #       --member=allUsers \
+      #       --role=roles/run.invoker \
+      #       expapp-${{ steps.slugify.outputs.branch }}
 
       # - name: 'Deploy to Cloud Run'
       #   id: deploy
@@ -93,8 +93,8 @@ jobs:
       #       --quiet
 
 
-      - name: 'Use output'
-        run: 'curl "${{ steps.deploy.outputs.url }}"'
+      # - name: 'Use output'
+      #   run: 'curl "${{ steps.deploy.outputs.url }}"'
 
 
       # - name: Set domain
