--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -54,6 +54,7 @@ jobs:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
       - name: Deploy stack
+        id: 'deploy'
         uses: pulumi/actions@v3
         with:
           command: up
@@ -93,8 +94,8 @@ jobs:
       #       --quiet
 
 
-      # - name: 'Use output'
-      #   run: 'curl "${{ steps.deploy.outputs.url }}"'
+      - name: 'Use output'
+        run: 'curl "${{ steps.deploy.outputs.url }}"'
 
 
       # - name: Set domain
