--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -13,10 +13,10 @@ env:
 jobs:
   deploy:
     name: Deploy
-    permissions:
-      deployments: write
-      contents: read
-      id-token: write
+    # permissions:
+    #   deployments: write
+    #   contents: read
+    #   id-token: write
     runs-on: ubuntu-latest
     environment: review
     steps:
@@ -42,18 +42,18 @@ jobs:
         with:
           pulumi-version: ^3.0.0
 
-      - name: start deployment
-        uses: bobheadxi/deployments@v1
-        id: deployment
-        with:
-          step: start
-          token: ${{ github.token }}
-          env: review
-          payload: >-
-            {
-              "action": "${{ github.event.action }}",
-              "label": "${{ steps.slugify.outputs.branch }}"
-            }
+      # - name: Start deployment
+      #   uses: bobheadxi/deployments@v1
+      #   id: deployment
+      #   with:
+      #     step: start
+      #     token: ${{ github.token }}
+      #     env: review
+      #     payload: >-
+      #       {
+      #         "action": "${{ github.event.action }}",
+      #         "label": "${{ steps.slugify.outputs.branch }}"
+      #       }
 
       - name: Create stack
         run: node create-stack.js
@@ -80,24 +80,20 @@ jobs:
       - name: 'Use output'
         run: 'curl "${{ steps.deploy.outputs.url }}"'
 
-
-      # - name: Set domain
-      #   id: set-domain
-      #   run: |
-      #     echo "::set-output name=domain::${{ env.GITHUB_HEAD_REF_SLUG_URL }}.my-app.com"
-
-      # - name: Echo inputs
-      #   run: |
-      #     echo "Ref Name: ${{ github.ref_name }}"
-      #     echo "Environment: ${{ github.event.inputs.environment }}"
-
-      - name: update deployment status
-        uses: bobheadxi/deployments@v1
-        if: always()
+      - name: Add PR Comment with URL
+        uses: thollander/actions-comment-pull-request@v1
         with:
-          step: finish
-          token: ${{ github.token }}
-          status: ${{ job.status }}
-          env: ${{ steps.deployment.outputs.env }}
-          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-          env_url: ${{ steps.deploy.outputs.url }}
+          message: "URL: ${{ steps.deploy.outputs.url }}"
+          comment_includes: 'URL:'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Update deployment status
+      #   uses: bobheadxi/deployments@v1
+      #   if: always()
+      #   with:
+      #     step: finish
+      #     token: ${{ github.token }}
+      #     status: ${{ job.status }}
+      #     env: ${{ steps.deployment.outputs.env }}
+      #     deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+      #     env_url: ${{ steps.deploy.outputs.url }}
