--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -77,15 +77,15 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-      - name: 'Use output'
-        run: 'curl "${{ steps.deploy.outputs.url }}"'
+      - name: 'URL'
+        run: 'curl "${{ steps.deploy.outputs.url }}/health"'
 
-      - name: Add PR Comment with URL
-        uses: thollander/actions-comment-pull-request@v1
-        with:
-          message: "URL: ${{ steps.deploy.outputs.url }}"
-          comment_includes: 'URL:'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Add PR Comment with URL
+      #   uses: thollander/actions-comment-pull-request@v1
+      #   with:
+      #     message: "URL: ${{ steps.deploy.outputs.url }}"
+      #     comment_includes: 'URL:'
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Update deployment status
       #   uses: bobheadxi/deployments@v1
